2004-10-10  Wakaba  <wakaba@suika.fam.cx>

	* domtest2perl.pl: New file.

	* Makefile, mkdommemlist.pl: New files.

	* dis2pm.pl, idl2dis.pl: New (moved from ../lib/Message/DOM/).

	* genlib.pl: Removed (moved to ../lib/manakai/).

2004-10-09  Wakaba  <wakaba@suika.fam.cx>

	* domtest2perl.pl, genlib.pl: New.

2003-09-07  Wakaba  <wakaba@suika.fam.cx>

	* xml-validate.pl: New script.
	* ChangeLog: Likewise.
	
