@@ -16,9 +16,12 @@ $file_pattern ||= qr/\.xml$/;
 
 opendir my $dirh, $dir or die "$0: $dir: $!";
 for (grep {$_ ne 'alltests.xml'} grep /$file_pattern/, readdir $dirh) {
+  my $out_file = $out_dir.'/'.$_.'.pl';
   my @cmd = ('perl', map ({"-I$_"} @INC),
              'domtest2perl.pl', $dir.'/'.$_,
-             '--output-file' => $out_dir.'/'.$_.'.pl');
+             '--output-file' => $out_file);
   print STDERR join " ", @cmd, "\n";
   system @cmd and die "$0: domtest2perl.pl: $@";
+  system 'perl', map ({"-I$_"} @INC), '-c', $out_file
+    and die "$0: $out_file: $@";
 }
