@@ -1,4 +1,13 @@
+2004-10-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* dis2pm.pl (disdoc2pod, disdoc2text): New element type "eg", "KEY"
+	and "EM" introduced.
+	(type_label): ManakaiDOM:ManakaiDOMKeyIdentifier and 
+	ManakaiDOM:ManakaiDOMKeyIdentifiers added.
+
 2004-10-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* dis2pm.pl (disdoc2text, disdoc2pod): New element "NOTE" introduced.
 
 	* domtest2perl.pl: New file.
 
